Gatling upgrade, incorporation of common-performance submodule.